# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: assistant.py  chat.py  db.py  document_types.py  main.py
backend/tests/: conftest.py  test_assistant.py  test_auth.py  test_chat.py  test_documents.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: app-gate.tsx  auth-screen.tsx  document-assistant.tsx  document-creator.tsx  documents-history.tsx  download-button.tsx  generic-chat.tsx  generic-download-button.tsx  generic-form.tsx  generic-pdf.tsx  generic-preview.tsx  mnda-chat.tsx  mnda-creator.tsx  mnda-form.tsx  mnda-pdf.tsx  mnda-preview.tsx  save-document-button.tsx  workspace.tsx
frontend/src/components/ui/: button.tsx  field.tsx  input.tsx  label.tsx  textarea.tsx
frontend/src/lib/: api.ts  document-types.ts  legal.ts  mnda-content.ts  schema.ts  session.ts  utils.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt
