[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal V1 backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "litellm>=1.86.0",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.32",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
